// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the SectorForm component. Should match snapshot - create. 1`] = `
<div
  aria-describedby="headlessui-description-:r2:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r0:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="max-h-screen w-screen md:w-3/5 lg:w-3/5 xl:w-1/2 p-8 transform bg-white shadow-xl rounded-2xl flex flex-col"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r1:"
    >
      <div
        class="bg-edit overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r2:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          <div
            class="w-full"
          >
            <form
              id="sector-form"
            >
              <div
                class="pb-12 mb-4 flex flex-col gap-3"
              >
                <div
                  class="text-2xl font-semibold text-dial-sapphire pb-4"
                >
                  Create New Sector
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-name"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-locale"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="locale"
                  >
                    Locale
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r3:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1dimb5e-singleValue"
                        >
                          English (en)
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-locale"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-parent"
                >
                  <label
                    class="text-dial-sapphire"
                    for="parent"
                  >
                    Parent Sector
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r4:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-5rjclb-placeholder"
                          id="react-select-:r4:-placeholder"
                        >
                          Parent Sector
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-:r4:-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-parentSector"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-displayable"
                >
                  <label
                    class="flex gap-x-2 mb-2 items-center self-start form-field-label"
                    for="sector-displayable"
                  >
                    <input
                      class="h-8 w-8"
                      data-testid="checkbox"
                      name="isDisplayable"
                      type="checkbox"
                    />
                    Is displayable
                  </label>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            form="sector-form"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the SectorForm component. Should match snapshot - edit for sector which has parent sector. 1`] = `
<div
  aria-describedby="headlessui-description-:r7:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r5:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="max-h-screen w-screen md:w-3/5 lg:w-3/5 xl:w-1/2 p-8 transform bg-white shadow-xl rounded-2xl flex flex-col"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r6:"
    >
      <div
        class="bg-edit overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r7:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          <div
            class="w-full"
          >
            <form
              id="sector-form"
            >
              <div
                class="pb-12 mb-4 flex flex-col gap-3"
              >
                <div
                  class="text-2xl font-semibold text-dial-sapphire pb-4"
                >
                  Edit Example Sector
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-name"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-locale"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="locale"
                  >
                    Locale
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r8:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1dimb5e-singleValue"
                        >
                          English (en)
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-locale"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-parent"
                >
                  <label
                    class="text-dial-sapphire"
                    for="parent"
                  >
                    Parent Sector
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r9:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-5rjclb-placeholder"
                          id="react-select-:r9:-placeholder"
                        >
                          Parent Sector
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-:r9:-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-parentSector"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-displayable"
                >
                  <label
                    class="flex gap-x-2 mb-2 items-center self-start form-field-label"
                    for="sector-displayable"
                  >
                    <input
                      class="h-8 w-8"
                      data-testid="checkbox"
                      name="isDisplayable"
                      type="checkbox"
                    />
                    Is displayable
                  </label>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            form="sector-form"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the SectorForm component. Should match snapshot - edit for which does not have parent sector. 1`] = `
<div
  aria-describedby="headlessui-description-:rc:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:ra:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="max-h-screen w-screen md:w-3/5 lg:w-3/5 xl:w-1/2 p-8 transform bg-white shadow-xl rounded-2xl flex flex-col"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:rb:"
    >
      <div
        class="bg-edit overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:rc:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          <div
            class="w-full"
          >
            <form
              id="sector-form"
            >
              <div
                class="pb-12 mb-4 flex flex-col gap-3"
              >
                <div
                  class="text-2xl font-semibold text-dial-sapphire pb-4"
                >
                  Edit Example Sector
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-name"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-locale"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="locale"
                  >
                    Locale
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:rd:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1dimb5e-singleValue"
                        >
                          English (en)
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-locale"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-parent"
                >
                  <label
                    class="text-dial-sapphire"
                    for="parent"
                  >
                    Parent Sector
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:re:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-5rjclb-placeholder"
                          id="react-select-:re:-placeholder"
                        >
                          Parent Sector
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-:re:-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-parentSector"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="sector-displayable"
                >
                  <label
                    class="flex gap-x-2 mb-2 items-center self-start form-field-label"
                    for="sector-displayable"
                  >
                    <input
                      class="h-8 w-8"
                      data-testid="checkbox"
                      name="isDisplayable"
                      type="checkbox"
                    />
                    Is displayable
                  </label>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            form="sector-form"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
